Aggiunto template per Norme di Progetto

--- a/.gitignore
+++ b/.gitignore
@@ -275,6 +275,8 @@ TSWLatexianTemp*
 # Makeindex log files
 *.lpz
 
+*.pdf
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,virtualenv
