--- a/.github/workflows/Pages.yml
+++ b/.github/workflows/Pages.yml
@@ -17,7 +17,7 @@ jobs:
           pip3 install -r Utils/requirements.txt
           python3 Utils/build.py build-output
           cp -r build-output/* output/${GITHUB_REF##*/}/
-          python3 Utils/jinjatest.py ${GITHUB_REF##*/}
+          python3 Utils/buildTemplates.py ${GITHUB_REF##*/}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
