--- a/.github/workflows/Pages.yml
+++ b/.github/workflows/Pages.yml
@@ -11,13 +11,13 @@ jobs:
 
       - name: Install and Build 🔧 
         run: |
-          mkdir -p output/${GITHUB_REF##*/}
+          mkdir -p output/${GITHUB_REF/\//-}
           pip3 install wheel
           pip3 install setuptools
           pip3 install -r Utils/requirements.txt
           python3 Utils/build.py build-output
-          cp -r build-output/* output/${GITHUB_REF##*/}/
-          python3 Utils/buildTemplates.py ${GITHUB_REF##*/}
+          cp -r build-output/* output/${GITHUB_REF/\//-}/
+          python3 Utils/buildTemplates.py ${GITHUB_REF/\//-}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
